# migris

./: Cargo.toml  THIRD_PARTY
birb/: Cargo.toml
birb-cli/: Cargo.toml
birb-cli/src/: main.rs
birb-cli/src/commands/: migrate.rs
birb/src/: common.rs  lib.rs  options.rs  schema.rs  util.rs  value.rs
birb/src/connectors/: mod.rs  mysql.rs
birb/src/connectors/csv/: connector.rs  schema.rs
birb/src/connectors/mysql/: connector.rs  schema.rs  value.rs
migris/: Cargo.toml
migris-cli/: Cargo.toml
migris-cli/src/: main.rs
migris-cli/src/commands/: migrate.rs
migris-gpui/: Cargo.toml
migris-gpui/src/: app.rs  assets.rs  components.rs  config.rs  connections.rs  event.rs  events.rs  main.rs  models.rs  secrets.rs  settings.rs  shared.rs  state.rs  tabs.rs  types.rs
migris-gpui/src/components/: connections.rs  editor.rs  icon.rs  mod.rs  panels.rs  settings.rs  table.rs
migris-gpui/src/tabs/: mod.rs  query.rs  table.rs
migris-ui/: Cargo.toml
migris-ui/src/: app.rs  main.rs  message.rs
migris-ui/src/widgets/: connection_panel.rs  icon.rs  mod.rs  panels.rs  tabs.rs  tree.rs
migris-ui/src/widgets/views/: query.rs
migris/src/: common.rs  connection.rs  connectors.rs  data.rs  driver.rs  drivers.rs  entity.rs  lib.rs  options.rs  schema.rs  shared.rs  sql.rs  value.rs
migris/src/connectors/: csv.rs  mod.rs  mysql.rs
migris/src/connectors/csv/: connector.rs  schema.rs
migris/src/connectors/mysql/: connector.rs  schema.rs  value.rs
migris/src/drivers/: mod.rs  mysql.rs
