[workspace]
members = ["migris", "migris-cli", "migris-gpui"]
resolver = "3"

[workspace.dependencies]
migris = { path = "migris" }

# external dependencies
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.32"
serde = "1.0.228"

[workspace.lints.clippy]
type_complexity = "allow"
