[package]
name = "birb"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures-util = "0.3.31"
rust_decimal = "1.39.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "chrono", "rust_decimal", "mysql" ] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [ "full" ] }
