[package]
name = "migris-gpui"
version = "0.1.0"
edition = "2024"

[dependencies]
migris = { workspace = true }

anyhow = "1.0.102"
directories = "6.0.0"
futures-lite = "2.6.1"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-sql"] }
keyring-core = "1.0.0"
rust-embed = "8.11.0"
serde = { workspace = true }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[lints]
workspace = true
